--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,38 @@
+/*import font*/
+@font-face {
+    font-family: "Nathan";
+    src: url(../assets/Nathan.otf);
+}
 
+@font-face {
+    font-family: "FiraSans";
+    src: url(../assets/FiraSans-Medium.ttf);
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: rgb(16, 10, 31);
+}
+
+.container {
+    max-width: 1280px;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: auto;
+    font-family: "FiraSans";
+}
+
+header h1 {
+    text-align: center;
+    font-family: "Nathan";
+    letter-spacing: 3px;
+}
+
+main {
+    border-radius: 5px;
+    padding: 20px;
+    background-color: rgb(28, 21, 46);
+    color: white;
+    box-sizing: border-box;
+}
