--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,70 @@
 /*import font*/
 @font-face {
-    font-family: "Nathan";
-    src: url(../assets/Nathan.otf);
+  font-family: "Nathan";
+  src: url(../assets/Nathan.otf);
 }
 
 @font-face {
-    font-family: "FiraSans";
-    src: url(../assets/FiraSans-Medium.ttf);
+  font-family: "FiraSans";
+  src: url(../assets/FiraSans-Medium.ttf);
+}
+
+/* ================>
+        LAYOUT
+<==================*/
+
+* {
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(16, 10, 31);
+  margin: 0;
+  padding: 0;
+  background-color: rgb(16, 10, 31);
 }
 
 .container {
-    max-width: 1280px;
-    padding: 10px;
-    box-sizing: border-box;
-    margin: auto;
-    font-family: "FiraSans";
+  max-width: 1100px;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: auto;
+  font-family: "FiraSans";
 }
 
-header h1 {
-    text-align: center;
-    font-family: "Nathan";
-    letter-spacing: 3px;
+main .main_title {
+  text-align: center;
+  font-family: "Nathan";
+  letter-spacing: 3px;
 }
 
 main {
-    border-radius: 5px;
-    padding: 20px;
-    background-color: rgb(28, 21, 46);
-    color: white;
-    box-sizing: border-box;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: rgb(28, 21, 46);
+  color: white;
+  box-sizing: border-box;
+}
+
+.cards_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  margin: auto;
+  box-sizing: border-box;
+  min-width: 300px;
+  height: 300px;
+  background-color: rgb(167, 167, 167);
+  box-shadow: 0 0 8px black;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  /* margin: 0 80px 60px 80px; */
+  margin: 40px;
+}
+
+.card h1 {
+  margin: auto;
 }
